# nz-immigration-rag

./: system_architecture.txt
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/api/routes/: chat.py
backend/app/cli/: __init__.py  ingest.py
backend/app/config/: source_allowlist.py
backend/app/db/: __init__.py  client.py
backend/app/db/migrations/: 0001_initial_schema.sql
backend/app/db/repositories/: __init__.py  base.py  chunks.py  documents.py  evaluations.py  ingestion_runs.py
backend/app/graph/: state.py
backend/app/indexing/: __init__.py  chunker.py  embedder.py
backend/app/ingestion/: normalize.py  pipeline.py
backend/app/ingestion/loaders/: __init__.py  base.py  inz_website.py  operational_manual.py
backend/app/schemas/: __init__.py  answer.py  api.py  chunk.py  common.py  document.py  graph.py  ingestion.py  ops.py  retrieval.py  source.py
backend/app/services/: chat_service.py  ingestion_service.py
backend/app/utils/: __init__.py  text.py
