[project]
name = "nz-immigration-rag-backend"
version = "0.1.0"
description = "Backend for a citation-first New Zealand immigration RAG assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langgraph>=0.2.0,<0.3.0",
  "openai>=1.0.0,<2.0.0",
  "pgvector>=0.3.0,<0.4.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "supabase>=2.6.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
nz-rag-ingest = "app.cli.ingest:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
